--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
-<app-header (pageChange)="onPageChange($event)"></app-header>
+<app-header></app-header>
 <div class="container mt-3">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="activePage == 'recipes'"></app-recipes>
-      <app-shopping-list
-        *ngIf="activePage == 'shopping-list'"
-      ></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
