--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Recipe Book</a>
+    <a class="navbar-brand">Recipe Book</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -16,24 +16,15 @@
     <div class="collapse navbar-collapse" [ngClass]="{ show: !isCollapsed }">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a
-            class="nav-link"
-            [ngClass]="{
-              active: active == 'recipes'
-            }"
-            href="#"
-            (click)="onPageChange('recipes')"
+          <a routerLink="/recipes" routerLinkActive="active" class="nav-link"
             >Recipes</a
           >
         </li>
         <li class="nav-item">
           <a
+            routerLink="/shopping-list"
+            routerLinkActive="active"
             class="nav-link"
-            [ngClass]="{
-              active: active == 'shopping-list'
-            }"
-            href="#"
-            (click)="onPageChange('shopping-list')"
             >Shopping List</a
           >
         </li>
@@ -42,7 +33,6 @@
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
-            href="#"
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false"
@@ -59,8 +49,12 @@
               transform: translate3d(0px, 39.3333px, 0px);
             "
           >
-            <li><a class="dropdown-item" href="#">Save Data</a></li>
-            <li><a class="dropdown-item" href="#">Fetch Data</a></li>
+            <li>
+              <a class="dropdown-item" style="cursor: pointer">Save Data</a>
+            </li>
+            <li>
+              <a class="dropdown-item" style="cursor: pointer">Fetch Data</a>
+            </li>
           </ul>
         </li>
       </ul>
