--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-xs-12">
-    <!-- <img
+    <img
       src="{{ recipe.imageUrl }}"
       alt=""
       class="img-fluid"
       style="max-height: 300px"
-    /> -->
+    />
   </div>
 </div>
 <div class="row">
@@ -41,7 +41,7 @@
         <a class="dropdown-item" href="#" (click)="onToShoppingList()"
           >To shopping list</a
         >
-        <a class="dropdown-item" href="#">Edit recipe</a>
+        <a class="dropdown-item" routerLink="edit">Edit recipe</a>
         <a class="dropdown-item" href="#">Delete recipe</a>
       </div>
     </div>
