--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,8 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-primary">New recipe</button>
+    <a routerLink="new">
+      <button class="btn btn-primary">New recipe</button>
+    </a>
   </div>
 </div>
 <hr />
@@ -8,8 +10,9 @@
   <div class="col-xs-12">
     <div class="list-group">
       <app-recipe-item
-        *ngFor="let recipeElement of recipes"
+        *ngFor="let recipeElement of recipes; let i = index"
         [recipe]="recipeElement"
+        [id]="i"
       ></app-recipe-item>
     </div>
   </div>
