Replace event emitters with observable subjects

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -38,7 +38,7 @@
           transform: translate3d(0px, 38px, 0px);
         "
       >
-        <a class="dropdown-item" href="#" (click)="onToShoppingList()"
+        <a class="dropdown-item" (click)="onToShoppingList()"
           >To shopping list</a
         >
         <a class="dropdown-item" routerLink="edit">Edit recipe</a>
