Improve form implementation (cleaner code, input validation, etc) and implment recipe add, edit and delete

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -42,7 +42,7 @@
           >To shopping list</a
         >
         <a class="dropdown-item" routerLink="edit">Edit recipe</a>
-        <a class="dropdown-item" href="#">Delete recipe</a>
+        <a class="dropdown-item" (click)="onDeleteRecipe()">Delete recipe</a>
       </div>
     </div>
   </div>
