--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,187 @@
-<p>Recipe edit component</p>
-<p *ngIf="editMode">You are editing a recipe</p>
-<p *ngIf="!editMode">You are creating a new recipe</p>
+<h3 *ngIf="isEditing">Editing Recipe</h3>
+<h3 *ngIf="!isEditing">Adding New Recipe</h3>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" [disabled]="!recipeForm.valid">
+            Save
+          </button>
+          <button class="btn btn-danger" type="button" (click)="onCancel()">
+            Cancel
+          </button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name" class="form-label">Name</label>
+            <input
+              name="name"
+              id="name"
+              type="text"
+              class="form-control"
+              [ngClass]="{
+                'is-invalid':
+                  !recipeForm.get('name').valid &&
+                  recipeForm.get('name').touched
+              }"
+              formControlName="name"
+            />
+            <span class="invalid-feedback">
+              <ng-container *ngIf="recipeForm.get('name').hasError('required')"
+                >This field is required</ng-container
+              >
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imageUrl" class="form-label">Image URL</label>
+            <input
+              name="imageUrl"
+              type="text"
+              id="imageUrl"
+              class="form-control"
+              [ngClass]="{
+                'is-invalid':
+                  !recipeForm.get('imageUrl').valid &&
+                  recipeForm.get('imageUrl').touched
+              }"
+              formControlName="imageUrl"
+              #imageUrl
+            />
+            <span class="invalid-feedback">
+              <ng-container
+                *ngIf="recipeForm.get('imageUrl').hasError('required')"
+                >This field is required</ng-container
+              >
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="my-3" *ngIf="imageUrl.value != ''">
+            <img [src]="imageUrl.value" class="img-fluid rounded" />
+            <div class="form-text">Preview</div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description" class="form-label">Description</label>
+            <textarea
+              name="description"
+              id="description"
+              type="text"
+              class="form-control"
+              rows="6"
+              [ngClass]="{
+                'is-invalid':
+                  !recipeForm.get('description').valid &&
+                  recipeForm.get('description').touched
+              }"
+              formControlName="description"
+            ></textarea>
+            <span class="invalid-feedback">
+              <ng-container
+                *ngIf="recipeForm.get('description').hasError('required')"
+                >This field is required</ng-container
+              >
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group" formArrayName="ingredients">
+            <label class="form-label">Ingredients</label>
+            <div
+              class="row mt-2"
+              *ngFor="let ingredientCtrl of controls; let i = index"
+              [formGroupName]="i"
+            >
+              <div class="col-8">
+                <input
+                  type="text"
+                  class="form-control"
+                  [ngClass]="{
+                    'is-invalid':
+                      !recipeForm.get('ingredients.' + i + '.name').valid &&
+                      recipeForm.get('ingredients.' + i + '.name').touched
+                  }"
+                  formControlName="name"
+                />
+                <span class="invalid-feedback">
+                  <ng-container
+                    *ngIf="
+                      recipeForm
+                        .get('ingredients.' + i + '.name')
+                        .hasError('required')
+                    "
+                    >This field is required</ng-container
+                  >
+                </span>
+              </div>
+              <div class="col-2">
+                <input
+                  type="number"
+                  class="form-control"
+                  [ngClass]="{
+                    'is-invalid':
+                      !recipeForm.get('ingredients.' + i + '.amount').valid &&
+                      recipeForm.get('ingredients.' + i + '.amount').touched
+                  }"
+                  formControlName="amount"
+                />
+                <span class="invalid-feedback">
+                  <ng-container
+                    *ngIf="
+                      recipeForm
+                        .get('ingredients.' + i + '.amount')
+                        .hasError('required')
+                    "
+                    >This field is required</ng-container
+                  >
+                  <ng-container
+                    *ngIf="
+                      recipeForm
+                        .get('ingredients.' + i + '.amount')
+                        .hasError('min')
+                    "
+                    >Amount must be at least 1</ng-container
+                  >
+                </span>
+              </div>
+              <div class="col-2">
+                <button
+                  class="btn btn-danger"
+                  type="button"
+                  (click)="onIngredientDelete(i)"
+                >
+                  x
+                </button>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 mt-2">
+                <button
+                  type="button"
+                  class="btn btn-success"
+                  (click)="onIngredientAdd()"
+                >
+                  New Ingredient
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
