--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSubmit(form)" #form="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
@@ -9,7 +9,8 @@
             name="name"
             id="name"
             class="form-control"
-            #nameInputRef
+            ngModel
+            required
           />
         </div>
         <div class="col-sm-2 form-group">
@@ -19,7 +20,9 @@
             name="amount"
             id="amount"
             class="form-control"
-            #amountInputRef
+            ngModel
+            required
+            min="1"
           />
         </div>
       </div>
@@ -27,12 +30,19 @@
         <div class="col-xs-12 d-flex gap-2 mt-3">
           <button
             class="btn btn-success"
-            type="button"
-            (click)="onIngredientAdd()"
+            type="submit"
+            [disabled]="!form.valid"
           >
-            Add
+            {{ isEditing ? "Update" : "Add" }}
           </button>
-          <button class="btn btn-danger" type="button">Delete</button>
+          <button
+            class="btn btn-danger"
+            type="button"
+            (click)="onDeletion()"
+            *ngIf="this.isEditing"
+          >
+            Delete
+          </button>
           <button class="btn btn-primary" type="button" (click)="clearForm()">
             Clear
           </button>
