--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,14 +2,14 @@
   <div class="col-xs-10">
     <app-shopping-list-edit></app-shopping-list-edit>
     <hr />
-    <ul class="list-group">
+    <div class="list-group">
       <a
-        class="list-group-item"
-        style="cursor: pointer"
-        *ngFor="let ingredient of ingredients"
+        class="list-group-item list-group-item-action"
+        (click)="onSelect(i)"
+        *ngFor="let ingredient of ingredients; let i = index"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
-    </ul>
+    </div>
   </div>
 </div>
