--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -50,10 +50,20 @@
             "
           >
             <li>
-              <a class="dropdown-item" style="cursor: pointer">Save Data</a>
+              <a
+                class="dropdown-item"
+                style="cursor: pointer"
+                (click)="onSaveData()"
+                >Save Data</a
+              >
             </li>
             <li>
-              <a class="dropdown-item" style="cursor: pointer">Fetch Data</a>
+              <a
+                class="dropdown-item"
+                style="cursor: pointer"
+                (click)="onFetchData()"
+                >Fetch Data</a
+              >
             </li>
           </ul>
         </li>
