--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,42 +30,18 @@
         </li>
       </ul>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            appDropdown
-          >
+        <li class="nav-item" display="dynamic" ngbDropdown>
+          <button class="nav-link" role="button" ngbDropdownToggle>
             Manage
-          </a>
-          <ul
-            class="dropdown-menu"
-            style="
-              position: absolute;
-              inset: 0px 0px auto auto;
-              margin: 0px;
-              transform: translate3d(0px, 39.3333px, 0px);
-            "
-          >
-            <li>
-              <a
-                class="dropdown-item"
-                style="cursor: pointer"
-                (click)="onSaveData()"
-                >Save Data</a
-              >
-            </li>
-            <li>
-              <a
-                class="dropdown-item"
-                style="cursor: pointer"
-                (click)="onFetchData()"
-                >Fetch Data</a
-              >
-            </li>
-          </ul>
+          </button>
+          <div ngbDropdownMenu>
+            <button ngbDropdownItem>
+              <a (click)="onSaveData()">Save Data</a>
+            </button>
+            <button ngbDropdownItem>
+              <a (click)="onFetchData()">Fetch Data</a>
+            </button>
+          </div>
         </li>
       </ul>
     </div>
