Add empty state for selected recipe and switched database region to EU

--- a/src/app/recipes/recipe-empty/recipe-empty.component.html
+++ b/src/app/recipes/recipe-empty/recipe-empty.component.html
@@ -1,1 +1,13 @@
-<p>Please select a recipe.</p>
+<div class="h-100 d-flex flex-col justify-content-center align-items-center">
+  <div
+    class="card text-center border-tertiary text-secondary w-50"
+    style="height: fit-content"
+  >
+    <div class="card-body">
+      <h5 class="card-title">Select a recipe</h5>
+      <p class="card-text">
+        Please select a recipe from the list on the left or add a new one
+      </p>
+    </div>
+  </div>
+</div>
