--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -3,7 +3,7 @@
     <img
       src="{{ recipe.imageUrl }}"
       alt=""
-      class="img-fluid"
+      class="img-fluid rounded"
       style="max-height: 300px"
     />
   </div>
