--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -36,19 +36,34 @@
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row my-3">
   <div class="col-xs-12">{{ recipe.description }}</div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h5>Ingredients</h5>
+    <h5 class="mb-3">Ingredients</h5>
     <ul class="list-group">
       <a
         class="list-group-item"
         style="cursor: pointer"
         *ngFor="let ingredient of recipe.ingredients"
       >
-        {{ ingredient.name }} ({{ ingredient.amount }})
+        {{ ingredient.amount.value }}{{ ingredient.amount.unit }}
+        {{ ingredient.name }}
+      </a>
+    </ul>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h5 class="my-3">How to Cook</h5>
+    <ul class="list-group list-group-numbered">
+      <a
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let step of recipe.method"
+      >
+        {{ step }}
       </a>
     </ul>
   </div>
