--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -13,17 +13,38 @@
             required
           />
         </div>
-        <div class="col-sm-2 form-group">
-          <label for="amount">Amount</label>
-          <input
-            type="number"
-            name="amount"
-            id="amount"
-            class="form-control"
-            ngModel
-            required
-            min="1"
-          />
+        <div ngModelGroup="amount" class="col-sm-5 row">
+          <div class="col-sm-6 form-group">
+            <label for="value">Amount</label>
+            <input
+              type="number"
+              name="value"
+              id="value"
+              class="form-control"
+              ngModel=""
+              required
+              min="1"
+            />
+          </div>
+          <div class="col-sm-6 form-group">
+            <label for="unit">Unit</label>
+            <select
+              type="number"
+              name="unit"
+              id="unit"
+              class="form-select"
+              ngModel
+              required
+            >
+              <option value="g" selected>g</option>
+              <option value="kg">kg</option>
+              <option value="tsp">tsp</option>
+              <option value="tbsp">tbsp</option>
+              <option value="cup">cup</option>
+              <option value="ml">ml</option>
+              <option value="l">l</option>
+            </select>
+          </div>
         </div>
       </div>
       <div class="row">
