--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,7 +30,12 @@
         </li>
       </ul>
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item" display="dynamic" ngbDropdown>
+        <li
+          class="nav-item"
+          display="dynamic"
+          ngbDropdown
+          *ngIf="isAuthenticated"
+        >
           <button class="nav-link" role="button" ngbDropdownToggle>
             Manage
           </button>
@@ -42,6 +47,14 @@
               <a (click)="onFetchData()">Fetch Data</a>
             </button>
           </div>
+        </li>
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <button class="nav-link" (click)="onLogout()">Logout</button>
+        </li>
+        <li class="nav-item" *ngIf="!isAuthenticated">
+          <a routerLink="/auth" routerLinkActive="active" class="nav-link"
+            >Authenticate</a
+          >
         </li>
       </ul>
     </div>
