--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,12 +8,18 @@
 <hr />
 <div class="row">
   <div class="col-xs-12">
-    <div class="list-group">
+    <div class="list-group" *ngIf="!isLoadingRecipe">
       <app-recipe-item
         *ngFor="let recipeElement of recipes; let i = index"
         [recipe]="recipeElement"
         [id]="i"
       ></app-recipe-item>
+    </div>
+
+    <div class="list-group" *ngIf="isLoadingRecipe">
+      <app-recipe-item-skeleton
+        *ngFor="let elemenet of sequenceArray(4)"
+      ></app-recipe-item-skeleton>
     </div>
   </div>
 </div>
