--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,79 +1,81 @@
-<ng-container *ngIf="!isLoadingRecipe">
-  <div class="row">
-    <div class="col-xs-12">
-      <img
-        src="{{ recipe.imageUrl }}"
-        alt=""
-        class="img-fluid rounded"
-        style="max-height: 300px"
-      />
+<div class="my-3">
+  <ng-container *ngIf="!isLoadingRecipe">
+    <div class="row">
+      <div class="col-xs-12">
+        <img
+          src="{{ recipe.imageUrl }}"
+          alt=""
+          class="img-fluid rounded"
+          style="max-height: 300px"
+        />
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <h1>{{ recipe.name }}</h1>
+    <div class="row">
+      <div class="col-xs-12">
+        <h1>{{ recipe.name }}</h1>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <div ngbDropdown>
-        <button
-          class="btn btn-secondary"
-          type="button"
-          id="dropdownMenuButton"
-          ngbDropdownToggle
-        >
-          Manage recipe
-        </button>
-        <div ngbDropdownMenu>
-          <button (click)="onToShoppingList()" ngbDropdownItem>
-            To shopping list
+    <div class="row">
+      <div class="col-xs-12">
+        <div ngbDropdown>
+          <button
+            class="btn btn-secondary"
+            type="button"
+            id="dropdownMenuButton"
+            ngbDropdownToggle
+          >
+            Manage recipe
           </button>
-          <button routerLink="edit" ngbDropdownItem>Edit recipe</button>
-          <button (click)="onDeleteRecipe()" ngbDropdownItem>
-            Delete recipe
-          </button>
+          <div ngbDropdownMenu>
+            <button (click)="onToShoppingList()" ngbDropdownItem>
+              To shopping list
+            </button>
+            <button routerLink="edit" ngbDropdownItem>Edit recipe</button>
+            <button (click)="onDeleteRecipe()" ngbDropdownItem>
+              Delete recipe
+            </button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="row my-3">
-    <div class="col-xs-12">{{ recipe.description }}</div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <h5 class="mb-3">Ingredients</h5>
-      <ul class="list-group">
-        <a
-          class="list-group-item"
-          style="cursor: pointer"
-          *ngFor="let ingredient of recipe.ingredients"
-        >
-          <span class="badge text-bg-primary"
-            >{{ ingredient.amount.value }}{{ ingredient.amount.unit }}</span
+    <div class="row my-3">
+      <div class="col-xs-12">{{ recipe.description }}</div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <h5 class="mb-3">Ingredients</h5>
+        <ul class="list-group">
+          <a
+            class="list-group-item"
+            style="cursor: pointer"
+            *ngFor="let ingredient of recipe.ingredients"
           >
+            <span class="badge text-bg-primary"
+              >{{ ingredient.amount.value }}{{ ingredient.amount.unit }}</span
+            >
 
-          {{ ingredient.name }}
-        </a>
-      </ul>
+            {{ ingredient.name }}
+          </a>
+        </ul>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <h5 class="my-3">How to Cook</h5>
-      <ul class="list-group list-group-numbered">
-        <a
-          class="list-group-item"
-          style="cursor: pointer"
-          *ngFor="let step of recipe.method"
-        >
-          {{ step }}
-        </a>
-      </ul>
+    <div class="row">
+      <div class="col-xs-12">
+        <h5 class="my-3">How to Cook</h5>
+        <ul class="list-group list-group-numbered">
+          <a
+            class="list-group-item"
+            style="cursor: pointer"
+            *ngFor="let step of recipe.method"
+          >
+            {{ step }}
+          </a>
+        </ul>
+      </div>
     </div>
-  </div>
-</ng-container>
+  </ng-container>
 
-<ng-container *ngIf="isLoadingRecipe">
-  <app-recipe-detail-skeleton></app-recipe-detail-skeleton>
-</ng-container>
+  <ng-container *ngIf="isLoadingRecipe">
+    <app-recipe-detail-skeleton></app-recipe-detail-skeleton>
+  </ng-container>
+</div>
