--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -2,13 +2,22 @@
   <div class="col-xs-10">
     <app-shopping-list-edit></app-shopping-list-edit>
     <hr />
+    <div class="text-center text-secondary" *ngIf="ingredients.length == 0">
+      No items in the shopping list
+    </div>
     <div class="list-group">
       <a
         class="list-group-item list-group-item-action"
         (click)="onSelect(i)"
         *ngFor="let ingredient of ingredients; let i = index"
+        [ngClass]="{
+          'list-group-item-success': ingredientsDiff.includes(i)
+        }"
       >
-        {{ ingredient.amount.value }}{{ ingredient.amount.unit }}
+        <span class="badge text-bg-primary">
+          {{ ingredient.amount.value | round }}{{ ingredient.amount.unit }}
+        </span>
+
         {{ ingredient.name }}
       </a>
     </div>
