Implement adding and removing recipes to and from db directly instead of manually pushing and fetching changes

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,8 +23,16 @@
             type="button"
             id="dropdownMenuButton"
             ngbDropdownToggle
+            [disabled]="isProcessingAction"
           >
-            Manage recipe
+            <ng-container *ngIf="isProcessingAction; else default">
+              <span
+                class="spinner-border spinner-border-sm"
+                aria-hidden="true"
+              ></span>
+              Loading...
+            </ng-container>
+            <ng-template #default> Manage recipe </ng-template>
           </button>
           <div ngbDropdownMenu>
             <button (click)="onToShoppingList()" ngbDropdownItem>
