--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -8,9 +8,16 @@
           <button
             class="btn btn-success"
             type="submit"
-            [disabled]="!recipeForm.valid"
+            [disabled]="!recipeForm.valid || isProcessingAction"
           >
-            Save
+            <ng-container *ngIf="isProcessingAction; else default">
+              <span
+                class="spinner-border spinner-border-sm"
+                aria-hidden="true"
+              ></span>
+              Saving...
+            </ng-container>
+            <ng-template #default> Save </ng-template>
           </button>
           <button class="btn btn-danger" type="button" (click)="onCancel()">
             Cancel
