--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,7 @@
 <a
   class="list-group-item list-group-item-action d-flex justify-content-between"
   style="cursor: pointer"
-  [routerLink]="[id]"
+  [routerLink]="[recipe.id]"
   routerLinkActive="active"
 >
   <div class="pull-left">
