--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -17,7 +17,7 @@
 
     <div class="list-group" *ngIf="isLoadingRecipe">
       <app-recipe-item-skeleton
-        *ngFor="let elemenet of sequenceArray(4)"
+        *ngFor="let _ of [].constructor(4)"
       ></app-recipe-item-skeleton>
     </div>
   </div>
