--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,16 +1,16 @@
 <app-loading-spinner *ngIf="isLoading" style="text-align: center" />
 <div class="row" *ngIf="!isLoading">
-  <div class="col-xs-12">
+  <div class="form-signin w-100 m-auto">
     <div class="alert alert-danger" *ngIf="error">{{ error }}</div>
-    <h4>{{ isLogin ? "Login" : "Sign up" }}</h4>
     <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-      <div class="form-group">
-        <label for="email">Email</label>
+      <h3 class="mb-5 text-center">{{ isLogin ? "Login" : "Sign up" }}</h3>
+      <div class="form-floating">
         <input
           type="email"
           id="email"
           name="email"
           class="form-control"
+          placeholder="name@example.com"
           ngModel
           required
           email
@@ -19,6 +19,7 @@
             'is-invalid': email.invalid && email.touched
           }"
         />
+        <label for="email">Email</label>
         <span *ngIf="email.errors?.['required']" class="invalid-feedback"
           >This field is required</span
         >
@@ -26,13 +27,13 @@
           >You must provide a valid email</span
         >
       </div>
-      <div class="form-group">
-        <label for="password">password</label>
+      <div class="form-floating">
         <input
           type="password"
           id="password"
           name="password"
           class="form-control"
+          placeholder="Password"
           ngModel
           required
           minlength="6"
@@ -41,7 +42,7 @@
             'is-invalid': password.invalid && password.touched
           }"
         />
-
+        <label for="password">password</label>
         <span *ngIf="password.errors?.['required']" class="invalid-feedback"
           >This field is required</span
         >
@@ -50,10 +51,14 @@
         >
       </div>
       <div class="my-3">
-        <button class="btn btn-primary" type="submit" [disabled]="form.invalid">
+        <button
+          class="btn btn-primary w-100 py-2"
+          type="submit"
+          [disabled]="form.invalid"
+        >
           {{ isLogin ? "Login" : "Sign up" }}
         </button>
-        |
+        <a href=""><div>Do not have an account? Sign up</div></a>
         <button
           class="btn btn-secondary"
           type="button"
