Improve auth page UI design, disabled all unallowed operations/routes, add creator of recipe to recipe data (now shows recipe creator on recipe details)

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,7 +35,7 @@
         </li>
         <li class="nav-item" *ngIf="!isAuthenticated">
           <a routerLink="/auth" routerLinkActive="active" class="nav-link"
-            >Authenticate</a
+            >Login</a
           >
         </li>
       </ul>
