--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,71 +1,151 @@
-<app-loading-spinner *ngIf="isLoading" style="text-align: center" />
-<div class="row" *ngIf="!isLoading">
+<div class="d-flex align-items-center pt-4">
   <div class="form-signin w-100 m-auto">
     <div class="alert alert-danger" *ngIf="error">{{ error }}</div>
     <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-      <h3 class="mb-5 text-center">{{ isLogin ? "Login" : "Sign up" }}</h3>
-      <div class="form-floating">
-        <input
-          type="email"
-          id="email"
-          name="email"
-          class="form-control"
-          placeholder="name@example.com"
-          ngModel
-          required
-          email
-          #email="ngModel"
-          [ngClass]="{
-            'is-invalid': email.invalid && email.touched
-          }"
-        />
-        <label for="email">Email</label>
-        <span *ngIf="email.errors?.['required']" class="invalid-feedback"
-          >This field is required</span
-        >
-        <span *ngIf="email.errors?.['email']" class="invalid-feedback"
-          >You must provide a valid email</span
-        >
-      </div>
-      <div class="form-floating">
-        <input
-          type="password"
-          id="password"
-          name="password"
-          class="form-control"
-          placeholder="Password"
-          ngModel
-          required
-          minlength="6"
-          #password="ngModel"
-          [ngClass]="{
-            'is-invalid': password.invalid && password.touched
-          }"
-        />
-        <label for="password">password</label>
-        <span *ngIf="password.errors?.['required']" class="invalid-feedback"
-          >This field is required</span
-        >
-        <span *ngIf="password.errors?.['minlength']" class="invalid-feedback"
-          >The password must be at least 6 characters long</span
-        >
-      </div>
-      <div class="my-3">
+      <h3 class="mb-4 text-center">{{ isLogin ? "Login" : "Sign up" }}</h3>
+      <ng-container *ngIf="!isLogin">
+        <div class="form-floating">
+          <input
+            type="text"
+            id="username"
+            name="username"
+            class="form-control"
+            placeholder="Example Name"
+            ngModel
+            required
+            #username="ngModel"
+            [ngClass]="{
+              'is-invalid': username.invalid && username.touched
+            }"
+          />
+          <label for="username">Username</label>
+          <span *ngIf="username.errors?.['required']" class="invalid-feedback"
+            >This field is required</span
+          >
+        </div>
+        <div class="form-floating">
+          <input
+            type="email"
+            id="email"
+            name="email"
+            class="form-control"
+            placeholder="name@example.com"
+            ngModel
+            required
+            email
+            #email="ngModel"
+            [ngClass]="{
+              'is-invalid': email.invalid && email.touched
+            }"
+          />
+          <label for="email">Email</label>
+          <span *ngIf="email.errors?.['required']" class="invalid-feedback"
+            >This field is required</span
+          >
+          <span *ngIf="email.errors?.['email']" class="invalid-feedback"
+            >You must provide a valid email</span
+          >
+        </div>
+        <div class="form-floating">
+          <input
+            type="password"
+            id="password"
+            name="password"
+            class="form-control"
+            placeholder="Password"
+            ngModel
+            required
+            minlength="6"
+            #password="ngModel"
+            [ngClass]="{
+              'is-invalid': password.invalid && password.touched
+            }"
+          />
+          <label for="password">password</label>
+          <span *ngIf="password.errors?.['required']" class="invalid-feedback"
+            >This field is required</span
+          >
+          <span *ngIf="password.errors?.['minlength']" class="invalid-feedback"
+            >The password must be at least 6 characters long</span
+          >
+        </div>
+      </ng-container>
+      <ng-container *ngIf="isLogin">
+        <div class="form-floating">
+          <input
+            type="email"
+            id="email"
+            name="email"
+            class="form-control"
+            placeholder="name@example.com"
+            ngModel
+            required
+            email
+            #email="ngModel"
+            [ngClass]="{
+              'is-invalid': email.invalid && email.touched
+            }"
+          />
+          <label for="email">Email</label>
+          <span *ngIf="email.errors?.['required']" class="invalid-feedback"
+            >This field is required</span
+          >
+          <span *ngIf="email.errors?.['email']" class="invalid-feedback"
+            >You must provide a valid email</span
+          >
+        </div>
+        <div class="form-floating">
+          <input
+            type="password"
+            id="password"
+            name="password"
+            class="form-control"
+            placeholder="Password"
+            ngModel
+            required
+            minlength="6"
+            #password="ngModel"
+            [ngClass]="{
+              'is-invalid': password.invalid && password.touched
+            }"
+          />
+          <label for="password">password</label>
+          <span *ngIf="password.errors?.['required']" class="invalid-feedback"
+            >This field is required</span
+          >
+          <span *ngIf="password.errors?.['minlength']" class="invalid-feedback"
+            >The password must be at least 6 characters long</span
+          >
+        </div>
+      </ng-container>
+
+      <div class="mt-4">
         <button
           class="btn btn-primary w-100 py-2"
           type="submit"
-          [disabled]="form.invalid"
+          [disabled]="form.invalid || isLoading"
         >
-          {{ isLogin ? "Login" : "Sign up" }}
+          <ng-container *ngIf="isLoading; else default">
+            <span
+              class="spinner-border spinner-border-sm"
+              aria-hidden="true"
+            ></span>
+          </ng-container>
+          <ng-template #default>
+            {{ isLogin ? "Login" : "Sign up" }}
+          </ng-template>
         </button>
-        <a href=""><div>Do not have an account? Sign up</div></a>
-        <button
-          class="btn btn-secondary"
-          type="button"
-          (click)="onSwitchMode()"
-        >
-          {{ isLogin ? "Switch to Sign up" : "Switch to Login" }}
-        </button>
+        <div class="mt-3 text-center">
+          {{
+            isLogin ? "Don't have an account? " : "Already have an account? "
+          }}
+          <span
+            class="text-primary"
+            (click)="onSwitchMode()"
+            style="cursor: pointer"
+            >{{ isLogin ? "Sign up" : "Login" }}</span
+          >
+        </div>
       </div>
     </form>
   </div>
