Improve UI and fix bug where recipe details crash after webpage refresh

--- a/src/app/recipes/recipe-empty/recipe-empty.component.html
+++ b/src/app/recipes/recipe-empty/recipe-empty.component.html
@@ -1,4 +1,6 @@
-<div class="h-100 d-flex flex-col justify-content-center align-items-center">
+<div
+  class="h-100 d-flex flex-col justify-content-center align-items-center mt-3"
+>
   <div
     class="card text-center border-tertiary text-secondary w-50"
     style="height: fit-content"
