--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand">Recipe Book</a>
+    <a class="navbar-brand" routerLink="/">Recipe Book</a>
     <button
       class="navbar-toggler"
       type="button"
