--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -68,7 +68,6 @@
         <ul class="list-group">
           <a
             class="list-group-item"
-            style="cursor: pointer"
             *ngFor="let ingredient of recipe.ingredients"
           >
             <span class="badge text-bg-primary"
@@ -80,15 +79,11 @@
         </ul>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-xs-12">
         <h5 class="my-3">How to Cook</h5>
         <ul class="list-group list-group-numbered">
-          <a
-            class="list-group-item"
-            style="cursor: pointer"
-            *ngFor="let step of recipe.method"
-          >
+          <a class="list-group-item" *ngFor="let step of recipe.method">
             {{ step }}
           </a>
         </ul>
