--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,10 +1,14 @@
-<h3 *ngIf="isEditing">Editing Recipe</h3>
-<h3 *ngIf="!isEditing">Adding New Recipe</h3>
+<h3 *ngIf="isEditing" class="mt-3">Editing Recipe</h3>
+<h3 *ngIf="!isEditing" class="mt-3">Adding New Recipe</h3>
 <div class="row">
   <div class="col-xs-12">
-    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+    <form
+      [formGroup]="recipeForm"
+      (ngSubmit)="onSubmit()"
+      class="d-flex flex-column gap-3"
+    >
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 d-flex gap-2">
           <button
             class="btn btn-success"
             type="submit"
